# apk_extractor

./: .gitignore  AGENTS.md  README.md  index.html  package-lock.json  package.json  pyproject.toml  vite.config.ts
.github/workflows/: build.yml
apk_extract_gui/: __main__.py  adb.py  bundle.py  gui.py  icons.py
src/: App.tsx  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
tests/: test_bundle.py  test_icons.py  test_parsing.py
